apps/staging/onedev/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: onedev-gateway
  namespace: onedev
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 8443
    hostname: "onedev.istari.benjaminmnoer.dk"
    tls:
      certificateRefs:
      - kind: Secret
        name: test-cert
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onedev-route
spec:
  parentRefs:
  - name: onedev-gateway
  hostnames:
  - "onedev.istari.benjaminmnoer.dk"
  rules:
  - backendRefs:
    - name: onedev
      port: 80
