apps/staging/onedev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onedev-route
  namespace: onedev
spec:
  parentRefs:
  - name: istari-gateway
    namespace: cilium
  hostnames:
  - "onedev.istari.benjaminmnoer.dk"
  rules:
  - backendRefs:
    - name: onedev
      port: 80
